-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: repo-valhalla
-
Component/s: hotspot
Reproducible with -Xint.
# Internal Error (t:/workspace/open/src/hotspot/share/services/mallocSiteTable.cpp:226), pid=5596, tid=23040
# assert(*_lock >= 0) failed: Can not content exclusive lock
Stack: [0x000000be0c920000,0x000000be0ca20000]
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [jvm.dll+0xb2ac51] os::platform_print_native_stack+0xf1 (os_windows_x86.cpp:369)
V [jvm.dll+0xd5a36b] VMError::report+0xf0b (vmerror.cpp:716)
V [jvm.dll+0xd5bc1e] VMError::report_and_die+0x8ae (vmerror.cpp:1524)
V [jvm.dll+0xd5c314] VMError::report_and_die+0x64 (vmerror.cpp:1308)
V [jvm.dll+0x52f662] report_vm_error+0x102 (debug.cpp:264)
V [jvm.dll+0xa59703] MallocSiteTable::shutdown+0x43 (mallocsitetable.cpp:206)
V [jvm.dll+0xa5a10d] MallocTracker::transition+0xcd (malloctracker.cpp:117)
V [jvm.dll+0xa7d566] MemTracker::shutdown+0x46 (memtracker.cpp:151)
V [jvm.dll+0xaf1143] NMTDCmd::execute+0x333 (nmtdcmd.cpp:152)
V [jvm.dll+0x5aae5f] DCmd::parse_and_execute+0x3bf (diagnosticframework.cpp:409)
V [jvm.dll+0x2b9344] jcmd+0x74 (attachlistener.cpp:206)
V [jvm.dll+0x2b9f30] attach_listener_thread_entry+0x330 (attachlistener.cpp:417)
V [jvm.dll+0xcebcae] JavaThread::run+0x27e (thread.cpp:1902)
V [jvm.dll+0xce22c2] Thread::call_run+0x192 (thread.cpp:404)
V [jvm.dll+0xb2941e] thread_native_entry+0x10e (os_windows.cpp:465)
C [ucrtbase.DLL+0x203ba]
C [KERNEL32.DLL+0x13f2]
C [ntdll.dll+0x154f4]
# Internal Error (t:/workspace/open/src/hotspot/share/services/mallocSiteTable.cpp:226), pid=5596, tid=23040
# assert(*_lock >= 0) failed: Can not content exclusive lock
Stack: [0x000000be0c920000,0x000000be0ca20000]
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [jvm.dll+0xb2ac51] os::platform_print_native_stack+0xf1 (os_windows_x86.cpp:369)
V [jvm.dll+0xd5a36b] VMError::report+0xf0b (vmerror.cpp:716)
V [jvm.dll+0xd5bc1e] VMError::report_and_die+0x8ae (vmerror.cpp:1524)
V [jvm.dll+0xd5c314] VMError::report_and_die+0x64 (vmerror.cpp:1308)
V [jvm.dll+0x52f662] report_vm_error+0x102 (debug.cpp:264)
V [jvm.dll+0xa59703] MallocSiteTable::shutdown+0x43 (mallocsitetable.cpp:206)
V [jvm.dll+0xa5a10d] MallocTracker::transition+0xcd (malloctracker.cpp:117)
V [jvm.dll+0xa7d566] MemTracker::shutdown+0x46 (memtracker.cpp:151)
V [jvm.dll+0xaf1143] NMTDCmd::execute+0x333 (nmtdcmd.cpp:152)
V [jvm.dll+0x5aae5f] DCmd::parse_and_execute+0x3bf (diagnosticframework.cpp:409)
V [jvm.dll+0x2b9344] jcmd+0x74 (attachlistener.cpp:206)
V [jvm.dll+0x2b9f30] attach_listener_thread_entry+0x330 (attachlistener.cpp:417)
V [jvm.dll+0xcebcae] JavaThread::run+0x27e (thread.cpp:1902)
V [jvm.dll+0xce22c2] Thread::call_run+0x192 (thread.cpp:404)
V [jvm.dll+0xb2941e] thread_native_entry+0x10e (os_windows.cpp:465)
C [ucrtbase.DLL+0x203ba]
C [KERNEL32.DLL+0x13f2]
C [ntdll.dll+0x154f4]
- relates to
-
JDK-8232108 [lworld] Reflective method invocation with scalarized return is not GC safe
-
- Resolved
-