8233297: [lworld] runtime/NMT/ShutdownTwice.java fails with assert(*_lock >= 0) failed: Can not content exclusive lock